[project]
name = "knowledge-base"
version = "0.1.0"
description = "LLM-driven markdown knowledge base CLI"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "anthropic>=0.40",
]

[project.scripts]
kb = "tools.kb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
